pembetulan height user

--- a/User/User - Daftar Komik/userdaftarkomik.css
+++ b/User/User - Daftar Komik/userdaftarkomik.css
@@ -39,7 +39,7 @@ article div#judul #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
 article div#daftarKomik{ /*sekotak daftar komik*/
     margin: auto;   /*ditaruh tengah*/
     margin-top: 100px;
-    height: 357px;
+    height: 80%;
     width: 90%;
     overflow-y: scroll;  /*apabila lebih overflow secara vertical, di scroll*/
 }
