--- a/HRD/HRDDefault.css
+++ b/HRD/HRDDefault.css
@@ -31,7 +31,6 @@ header #logo{  /*penempatan gambar logo tepoz di kiri atas*/
     padding-top: 0%;
     height:90px;
     top: 0.2%;
-    max-width:40%;
 }
 header p#welcome{   /*tulisan welcome smpai logout di pojok kanan atas*/
     float: right;   /*penempatan ke pojok kanan */
@@ -148,6 +147,9 @@ a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
 
 /*---------------------------media query---------------------------*/
 @media screen and (max-width: 680px){ /*view port kecil, utk HP*/
+    header #logo{
+        height: 80px;
+    }
      /*-----------------header-----------------*/
      header{ /*header height nya ditambahi, semua element di ketengahi*/
         height: 180px;
