--- a/User/UserDefault.css
+++ b/User/UserDefault.css
@@ -33,7 +33,6 @@ header #logo{  /*penempatan gambar logo tepoz di kiri atas*/
     padding-top: 0%;
     height:90px;
     top: 0.2%;
-    max-width:40%;
 }
 header p#welcome{   /*tulisan welcome smpai logout di pojok kanan atas*/
     float: right;   /*penempatan ke pojok kanan */
@@ -62,14 +61,6 @@ article input, article select, article textarea{   /*kotak yang utk input*/
 article input[type=text]:focus { /*warna background berubah ketika focus*/
     background-color: cornflowerblue;
 }
-
-.floatKiri{
-    float: left;
-}
-
-.floatKanan{
-    float: right;
-}
 /*------------------------bagian artikel---------------------*/
 
 /*----------tombol utk up ke atas----------*/
@@ -91,6 +82,9 @@ a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
 
 /*---------------------------media query---------------------------*/
 @media screen and (max-width: 680px){ /*view port kecil, utk HP*/
+    header #logo{
+        height: 80px;
+    }
     body{
         position: unset;
     }
