--- a/Admin/Gudang/gudangDefault.css
+++ b/Admin/Gudang/gudangDefault.css
@@ -115,11 +115,10 @@ article div#judul #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
 
 /*------------------------bagian isi (daftar nya)---------------------*/
 article div#daftar{ /*sekotak daftar */
+    clear: both;
     margin-left: 50px; /*ditaruh tengah*/
     margin-right: 0px;
-    height: 400px;
-    width: 95.5%;
-    overflow-y: scroll;  /*apabila lebih overflow secara vertical, di scroll*/
+    width: 95%;
 }
 article #daftar .info{ /*kotak masing2  yang isinya info */
     border: 0.1px solid #F2F2F2;
@@ -238,6 +237,7 @@ article div#konten{ /*konten (sebelahnya aside)*/
     float: left;
     width: 80%;
     height: 100%;
+    overflow-y: scroll;
 }
 article div#konten h1{  /*judul*/
     text-align: center; /*taruh tengah*/
@@ -372,10 +372,10 @@ a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
 
     /*--------utk article (bagian daftar )---------*/
     article div#daftar{ /*sekotak daftar */
+        clear: both;
         margin-top: 10px;
         margin-left: auto;
         width: 100%;
-        overflow-y: unset;
     }
     article #daftar .info{ /*ukuran kotak putih dikecilin*/
         height: 160px;
