--- a/kasir/Kasir - daftar member/cssKasirDaftarMember.css
+++ b/kasir/Kasir - daftar member/cssKasirDaftarMember.css
@@ -20,9 +20,7 @@ article div#konten #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
 
 /*tabel daftar peminjaman------*/
 article div#konten div#tabel{ /*div pembungkus tabel*/
-    height: 68%;
     width: 85%;
-    overflow-y: scroll;  /*scroll horizontal kalau overflow*/
     margin: auto;   /*ketengahin*/
     margin-top: 100px;
     clear: both;
@@ -146,13 +144,12 @@ div#popup .value{   /*valuenya (no,nama,email)*/
     /*-----------------utk konten-----------------*/
     /*tabel------*/
     article div#konten div#tabel{ /*div pembungkus tabel*/
-        overflow-y: unset;  /*tidak ada scroll lagi*/
         overflow-x: scroll;
         margin-top: 120px;
         width: auto;
         height: auto;
     }
-    table{
+    div#tabel table{
         font-size: 10px; /*tulisan dikecilkan*/
         width: 150%; 
     }
