--- a/Admin/AdminDefault.css
+++ b/Admin/AdminDefault.css
@@ -12,6 +12,7 @@ body{ /*supaya mentok selayar*/
     padding: 0px;
     height: 100%;
     width: 100%;
+    position: fixed;
 }
 .blue{ /*utk font-font yg warnanya biru*/
     color: #000066;
@@ -127,6 +128,9 @@ a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
 
 /*---------------------------media query---------------------------*/
 @media screen and (max-width: 680px){ /*view port kecil, utk HP*/
+    body{
+        position: unset;
+    }
     header #logo{
         height: 80px;
     }
