--- a/Admin/Gudang/Gudang - Tambah Komik/gudang - tambah komik.css
+++ b/Admin/Gudang/Gudang - Tambah Komik/gudang - tambah komik.css
@@ -9,6 +9,7 @@ article div#konten{ /*konten (sebelahnya aside)*/
     float: left;
     width: 80%;
     height: 100%;
+    overflow-y: scroll;
 }
 article div#konten h1{  /*konten*/
     text-align: center; /*taruh tengah*/
@@ -68,8 +69,13 @@ article div#konten input#tombol:hover{
 }
 
 /*------------------------bagian input---------------------*/
-article div#konten{ /*konten (sebelahnya aside)*/
-    overflow-y: scroll;
-}
 /*------------------------bagian input---------------------*/
 /*------------------------bagian konten---------------------*/
+
+/*---------------------------media query---------------------------*/
+@media screen and (max-width: 680px){ 
+    body article div#konten{ /*konten (sebelahnya aside)*/
+        width: 100%;
+        overflow-y: unset;
+    }
+}
