--- a/Admin/kasir/Kasir - tambah member/kasirtambahmember.css
+++ b/Admin/kasir/Kasir - tambah member/kasirtambahmember.css
@@ -6,10 +6,14 @@ article{ /*article adlah semua yang ada dibawah header*/
 /*------------------------bagian artikel---------------------*/
 
 /*------------------------bagian konten---------------------*/
+.simbol{
+    color: rgba(94,94,94,0.9);
+}
 article div#konten{ /*konten (sebelahnya aside)*/
     float: left;
     width: 80%;
     height: 100%;
+    overflow-y: scroll;
 }
 article div#konten h1{  /*konten*/
     text-align: center; /*taruh tengah*/
@@ -83,6 +87,10 @@ article div#konten input.tombol{
 /*---------------------------media query---------------------------*/
 @media screen and (max-width: 680px){ /*view port kecil, utk HP*/
     /*-- bagian isi2*/
+    article div#konten{ /*konten (sebelahnya aside)*/
+        width: 100%;
+        overflow-y: unset;
+    }
     article div#konten div#kiri, article div#konten div#kanan{
         float: none;
         clear: both;
