user sudah sedikit canggih

--- a/User/userDaftarKomik/userdaftarkomik.css
+++ b/User/userDaftarKomik/userdaftarkomik.css
@@ -24,7 +24,7 @@ article div#judul #searching{ /*"search by" (label, dropbox, input, dan icon-nya
     margin-right: 2%; /*jarak dgn sort by*/
 }
 
-#tombolClose,#blur,.infoKomik,select,input,option:hover{
+.klik,#tombolClose,#blur,.infoKomik,select,input,option:hover{
     cursor: pointer;
 }
 article div#judul #searching #searchBox{ /*"search by" (input, dan icon-nya)*/
