--- a/Admin/Manager/managerDaftarPeminjaman/managerDaftarPeminjaman.css
+++ b/Admin/Manager/managerDaftarPeminjaman/managerDaftarPeminjaman.css
@@ -10,6 +10,7 @@ article div#konten{ /*konten (sebelahnya aside)*/
     float: left;
     width: 80%;
     height: 100%;
+    overflow-y: scroll;
 }
 article div#konten h1{  /*konten*/
     text-align: center; /*taruh tengah*/
@@ -37,9 +38,7 @@ article div#konten #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
 
 /*tabel daftar peminjaman------*/
 article div#konten div#tabel{ /*div pembungkus tabel*/
-    height: 65%;
     width: 95%;
-    overflow-y: scroll;  /*scroll horizontal kalau overflow*/
     margin: auto;   /*ketengahin*/
     margin-top: 100px;
     clear: both;
@@ -84,6 +83,7 @@ td{
     article div#konten{
         float: none; /*hilangkan float agar pindah kebawah*/
         width: 100%;
+        overflow-y: unset;
     }
     /*keperluan searching -------*/
     article div#konten #searching{ /*media search diketengahi*/
@@ -110,7 +110,7 @@ td{
     /*tabel daftar peminjaman------*/
     article div#konten div#tabel{ /*div pembungkus tabel*/
         overflow-y: unset;  /*tidak ada scroll lagi*/
-        margin-top: 120px;
+        margin-top: 150px;
     }
     table{
         font-size: 10px; /*tulisan dikecilkan*/
