--- a/Admin/kasir/Kasir - daftar member/cssKasirDaftarMember.css
+++ b/Admin/kasir/Kasir - daftar member/cssKasirDaftarMember.css
@@ -10,6 +10,7 @@ article div#konten{ /*konten (sebelahnya aside)*/
     float: left;
     width: 80%;
     height: 100%;
+    overflow-y: scroll;
 }
 article div#konten h1{  /*konten*/
     text-align: center; /*taruh tengah*/
@@ -138,6 +139,10 @@ div#popup .value{   /*valuenya (no,nama,email)*/
 
 /*---------------------------media query---------------------------*/
 @media screen and (max-width: 680px){ /*view port kecil, utk HP*/
+    article div#konten{
+        width: 100%;
+        overflow-y: unset;
+    }
     /*keperluan searching -------*/
     article div#konten #searching{
         margin: auto;
