--- a/kasir/Kasir - daftar member/cssKasirDaftarMember.css
+++ b/kasir/Kasir - daftar member/cssKasirDaftarMember.css
@@ -69,7 +69,7 @@ div#tabel table td{
 .email{
     width: 40%;
 }
-.noIdentitas, .gender{
+.noIdentitas, .gender, .alamat, .tanggalLahir{
     display: none;
 }
 /*tabel daftar peminjaman------*/
@@ -106,9 +106,10 @@ div#popup div#isiPopup{
     margin: auto;
     margin-top: 20px;
     width: 60%;
+    border: 2px solid green;
 }
 div#popup div#isiPopup div.divSimbolPopup{
-    width: 80px;
+    width: 10%;
     height: 50px;
     clear: both;
     float: left;
@@ -116,13 +117,15 @@ div#popup div#isiPopup div.divSimbolPopup{
 div#popup .simbolPopup{ /*font awesome di popup*/
     font-size: 40px;
 }
+div#popup div.popupSatuan{
+    margin-bottom: 20px;
+}
 div#popup .atribut{ /*nama:, id: ,gender: , dll*/
-    width: 20%;
-    float: left;
+    border: 2px solid magenta;
 }
 div#popup .value{   /*valuenya (no,nama,email)*/
-    float: left;
     width: 45%;
+    border: 2px solid blue;
     overflow: hidden;   /*jika data melebihi batas tabel, di hidden*/
     text-overflow: ellipsis; /*supaya teks panjang berubah jadi ...*/
     white-space: nowrap; /*supaya tidak di-newline*/
