--- a/kasir/Kasir - daftar member/cssKasirDaftarMember.css
+++ b/kasir/Kasir - daftar member/cssKasirDaftarMember.css
@@ -69,7 +69,7 @@ div#tabel table td{
 .email{
     width: 40%;
 }
-.noIdentitas, .gender, .alamat, .tanggalLahir{
+.noIdentitas, .gender, .alamat, .tanggalLahir, .telepon{
     display: none;
 }
 /*tabel daftar peminjaman------*/
@@ -102,35 +102,55 @@ div#popup .simbolX{ /*simbol x untuk close popup*/
     color: black;
     font-size: 30px;
 }
-div#popup div#isiPopup{
+div#popup div#parentIsiPopup{
     margin: auto;
+    height: 80%;
+    width: 35%;
     margin-top: 20px;
-    width: 60%;
-    border: 2px solid green;
+    overflow: hidden;
+}
+div#popup div#isiPopup{
+    height: 100%;
+    width: 100%;
+    overflow-y: scroll;
+    padding-right: 17px;        /*keperluan supaya scrollbarnya hilang, tp ttep bisa scroll*/
+    box-sizing: content-box;    /*keperluan supaya scrollbarnya hilang*/
 }
 div#popup div#isiPopup div.divSimbolPopup{
-    width: 10%;
+    width: 20%;
     height: 50px;
     clear: both;
     float: left;
 }
 div#popup .simbolPopup{ /*font awesome di popup*/
+    margin-top: 15px;
     font-size: 40px;
 }
 div#popup div.popupSatuan{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 div#popup .atribut{ /*nama:, id: ,gender: , dll*/
-    border: 2px solid magenta;
+    width: 100%;
 }
 div#popup .value{   /*valuenya (no,nama,email)*/
-    width: 45%;
+    width: 200px;
     border: 2px solid blue;
     overflow: hidden;   /*jika data melebihi batas tabel, di hidden*/
     text-overflow: ellipsis; /*supaya teks panjang berubah jadi ...*/
     white-space: nowrap; /*supaya tidak di-newline*/
 }
-
+div#popup select.value{
+    width: 220px;
+}
+div#popup .value#popupIdMember{
+    background-color: blue;
+    color: white;
+}
+input#tombolDetailMember{
+    margin-right: 50px;
+    width: 50px;
+    float: right;
+}
 /*pop up message*/
 
 /*---------------------------media query---------------------------*/
